--- a/data/.template.yaml
+++ b/data/.template.yaml
@@ -24,5 +24,5 @@ constraints:
   #   check: !Lights [2]
   #   resultUnknown: true
   #   # noExclude: true
-  #   # buildTreee: true
+  #   # buildTree: true
   #   map:
