--- a/.github/workflows/run-simulation.yml
+++ b/.github/workflows/run-simulation.yml
@@ -259,7 +259,7 @@ jobs:
           if [[ ! -e "${output_dir}/${sim}_tab.png" ]]; then
             sudo apt install graphviz python3 python3-pip python3-venv
             python3 -m venv venv
-            source venv && pip install ansitoimg
+            source venv/bin/activate && pip install ansitoimg
           fi
 
       - name: Compute for ${{ matrix.sim }}
@@ -274,7 +274,7 @@ jobs:
             echo "Generating pictures for simulation: ${sim}"
 
             # Generate pictures using your Python script
-            source venv && python3 generate_png.py "${input_file}" "${output_dir}/${sim}"
+            source venv/bin/activate && python3 generate_png.py "${input_file}" "${output_dir}/${sim}"
 
             # ls -al "./data/${sim}/${sim}"*.dot
             for dot_file in "./data/${sim}/${sim}"*.dot ; do
