switch to hugo hextra theme

--- a/data/de01r/de01r.yaml
+++ b/data/de01r/de01r.yaml
@@ -2,7 +2,7 @@
 # 0wvedwvep0wPj
 
 frontmatter:
-  title: DE RSIL Staffel 1
+  linkTitle: DE RSIL Staffel 1
   identifier: deR-season1
   weight: 1
 
