--- a/data/de05r/de05r.yaml
+++ b/data/de05r/de05r.yaml
@@ -2,7 +2,7 @@
 # 0wvedwvep0wPj
 
 frontmatter:
-  title: DE RSIL Staffel 5
+  linkTitle: DE RSIL Staffel 5
   identifier: deR-season5
   weight: 1
 
