--- a/data/de03r/de03r.yaml
+++ b/data/de03r/de03r.yaml
@@ -2,7 +2,7 @@
 # 0wvedwvep0wPj
 
 frontmatter:
-  title: DE RSIL Staffel 3
+  linkTitle: DE RSIL Staffel 3
   identifier: deR-season3
   weight: 1
 
