trying to fixup hugo issues

--- a/.github/workflows/run-simulation.yml
+++ b/.github/workflows/run-simulation.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
     paths:
-      - 'rust/**'
+      # - 'rust/**'
       - 'data/**.yaml'
       # - 'gh-pages/**'
 
@@ -46,15 +46,15 @@ jobs:
         run: |
           set +o pipefail
           # Check if there's a push affecting the `rust/**` path or if it's a manual trigger
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" || "$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | grep "rust/.*" || echo "")" != "" ]]; then
-            echo "re-generate all"
-            # If `rust/**` is changed or it's a manual trigger, run all simulations
-            sims="[\"$(find ./data -not -path '*/[@.]*' -type f -name '*.yaml' | sort -u | sed '{:q;N;s/\n/","/g;t q}')\"]"
-          else
-            echo "re-generate only required"
+          # if [[ "${{ github.event_name }}" == "workflow_dispatch" || "$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | grep "rust/.*" || echo "")" != "" ]]; then
+          #   echo "re-generate all"
+          #   # If `rust/**` is changed or it's a manual trigger, run all simulations
+          #   sims="[\"$(find ./data -not -path '*/[@.]*' -type f -name '*.yaml' | sort -u | sed '{:q;N;s/\n/","/g;t q}')\"]"
+          # else
+          #   echo "re-generate only required"
             # Detect which simulation inputs have changed
             sims="[\"$(git diff --name-only ${{ github.event.before }} ${{ github.event.after }} | grep "data/[^.]*\.yaml" | sed "s/\(.*\)\.yaml$/\1/" | sort -u | sed '{:q;N;s/\n/","/g;t q}')\"]"
-          fi
+          # fi
 
           echo "$sims"
 
