--- a/.github/workflows/run-simulation.yml
+++ b/.github/workflows/run-simulation.yml
@@ -7,7 +7,7 @@ on:
     paths:
       - 'rust/**'
       - 'data/**.yaml'
-      - 'gh-pages/**'
+      # - 'gh-pages/**'
 
   # Allows to run this workflow manually from the Actions tab
   workflow_dispatch:
