--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,12 @@
 *.txt
 *.png
 *.csv
+statSum.json
 *.html
 !gh-pages/layouts/*.html
 
-gh-pages/content/ayto/comparison/*md
-!gh-pages/content/ayto/comparison/index.*md
+gh-pages/content/comparison/*md
+!gh-pages/content/comparison/index.*md
 
 *.dot
 *.xopp
