--- a/data/de05r/de05r.yaml
+++ b/data/de05r/de05r.yaml
@@ -39,7 +39,7 @@ setB:
 
 constraints:
   - type: !Box {num: 1, comment: "E03 -- verkauft > 20€ > Joanna"}
-    check: !Nothing
+    check: !Sold
     map:
       Sandra: Kevin
       # Olli: Elli
@@ -233,7 +233,7 @@ constraints:
       # Sidar
 
   - type: !Box {num: 9, comment: "E19 -- verkauft 5k Sidar"}
-    check: !Nothing
+    check: !Sold
     map:
       # Beverly: Sidar
       Nelly: CalvinHot
