--- a/data/de06/de06.yaml
+++ b/data/de06/de06.yaml
@@ -46,6 +46,8 @@ constraints:
       Josh: Anna
       # Danish: Deisy
 
+# newcomer: Tori
+
   - type: !Night {num: 1, comment: "E04"}
     check: !Lights [2]
     # resultUnknown: true
@@ -63,7 +65,7 @@ constraints:
       Tano: Chiara
       Dion: Tori
 
-  - type: !Box {num: 2, comment: "E05 -- verkauft +30.000€"}
+  - type: !Box {num: 2, comment: "E05 -- verkauft", offer: !Group {by: "Dino", amount: 30_000}}
     check: !Sold
     map:
       Levin: Camelia
@@ -84,7 +86,7 @@ constraints:
       Joshua: Joanna
       Sinan: Ina
       Dion: Selina
-      # Sophia
+      # Dion: Sophia
 
   - type: !Box {num: 3, comment: "E07"}
     check: !Lights [0]
@@ -154,7 +156,7 @@ constraints:
       Tano: Tori
       # Tano: Anna
 
-  - type: !Box {num: 6, comment: "E13 -- verkauft d. Tano+Tori 2 x 20k"}
+  - type: !Box {num: 6, comment: "E13 -- verkauft", offer: !Pair {byA: "Tano", byB: "Tori", amount: 40_000, save: true, reducedPot: true}} # 190k übrig
     check: !Sold
     map:
       Tano: Tori
@@ -174,7 +176,7 @@ constraints:
       Tano: Tori
       Enes: Selina
       Joshua: Ina
-      # Joanna
+      # Joshua: Joanna
 
   - type: !Box {num: 7, comment: "E15"}
     check: !Lights [0]
@@ -222,7 +224,7 @@ constraints:
       Tano: Joanna
       # Tori
 
-  - type: !Box {num: 9, comment: "E19"}
+  - type: !Box {num: 9, comment: "E19", offer: !Group {by: "Levin"}} # amount unknown
     check: !Lights [1]
     map:
       # Dion: Chiara
