--- a/data/de02/de02.yaml
+++ b/data/de02/de02.yaml
@@ -1,6 +1,8 @@
 # vim macro to swap the map:
 # 0wvedwvep0wPj
 
+no_offerings_noted: true
+
 frontmatter:
   linkTitle: DE Staffel 2
   identifier: de-season2
