--- a/data/uk01/uk01.yaml
+++ b/data/uk01/uk01.yaml
@@ -1,6 +1,8 @@
 # vim macro to swap the map:
 # 0wvedwvep0wPj
 
+no_offerings_noted: true
+
 frontmatter:
   linkTitle: UK Staffel 1
   identifier: uk-season1
