--- a/data/us01/us01.yaml
+++ b/data/us01/us01.yaml
@@ -1,6 +1,8 @@
 # vim macro to swap the map:
 # 0wvedwvep0wPj
 
+no_offerings_noted: true
+
 frontmatter:
   linkTitle: US Staffel 1
   identifier: us-season1
